portefaix-policies-0.7.0/kyverno/P0002-pod-host-ipc/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok-1
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok-2
spec:
  hostIPC: false
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko
spec:
  hostIPC: true
  containers:
  - name: nginx
    image: nginx
